Fix overflow-x bug

--- a/src/styles/FocusPhoto.css
+++ b/src/styles/FocusPhoto.css
@@ -1,10 +1,10 @@
-/*
-.photo-container isn't flex in the final design, only for testing purposes
-*/
-body {
+* {
   overflow-x: hidden;
 }
 
+/*
+.photo-container isn't flex in the final design, only for testing purposes
+*/
 .photo-container {
   width: 100vw;
   display: flex;
