--- a/src/styles/FocusPhotoText.css
+++ b/src/styles/FocusPhotoText.css
@@ -1,6 +1,9 @@
+* {
+  overflow-x: hidden;
+}
+
 body {
   line-height: 1.5;
-  overflow-x: hidden;
 }
 
 .photo-text {
